Capturing screenshots on failure

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": ".\\node_modules\\.bin\\testcafe.cmd chrome .\\tests\\example.js"
+    "test": ".\\node_modules\\.bin\\testcafe.cmd chrome .\\tests\\example.js  -s takeOnFails=true"
   },
   "author": "",
   "license": "ISC",
